TODO: fontawesome update, 'roles' alignment bug, contact form

--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ body {
  * links - (_document-setup)
  * ------------------------------------------------------------------- */
 a, a:visited {
-  color: #07617d;
+  color: #423176;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -332,7 +332,7 @@ ul.disc li::before {
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  background: #07617d;
+  background: #423176;
   position: absolute;
   left: -17px;
   top: 11px;
@@ -341,7 +341,7 @@ ul.disc li::before {
 
 dt {
   margin: 0;
-  color: #07617d;
+  color: #423176;
 }
 
 dd {
@@ -471,7 +471,7 @@ td:last-child {
 }
 
 .pace .pace-progress {
-  background: #423176;
+  background: #6e609b;
   position: fixed;
   z-index: 900;
   top: 0;
@@ -510,7 +510,7 @@ td:last-child {
   margin-left: -30px;
   margin-top: -30px;
   padding: 0;
-  background-color: #423176;
+  background-color: #6e609b;
   border-radius: 100%;
   -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
   animation: sk-scaleout 1.0s infinite ease-in-out;
@@ -811,8 +811,8 @@ button.stroke.large, .button.stroke.large {
 }
 
 button.stroke:hover, .button.stroke:hover {
-  border: 3px solid #423176;
-  color: #423176;
+  border: 3px solid #6e609b;
+  color: #6e609b;
 }
 
 button::-moz-focus-inner,
@@ -998,7 +998,7 @@ input::-moz-focus-inner {
   color: #252525;
 }
 .stats-tabs li a:hover {
-  color: #07617d;
+  color: #423176;
 }
 .stats-tabs li a em {
   display: block;
@@ -1786,13 +1786,13 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   max-width: 850px;
 }
 #about span {
-  color: #07617d;
+  color: #423176;
 }
 #about h3 {
   font-family: "montserrat-bold", sans-serif;
   font-size: 1.8rem;
   line-height: 1.667;
-  color: #07617d;
+  color: #423176;
   text-transform: uppercase;
   letter-spacing: .3rem;
   position: relative;
@@ -1806,11 +1806,15 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   margin: 0 auto 2.4rem;
 }
 #about .lead {
-  font-family: "librebaskerville-bold", serif;
-  font-size: 4rem;
+   list-style-type: none;
   line-height: 1.8;
   color: #2e383f;
   margin-top: 6rem;
+  font-family: "montserrat-regular", sans-serif;
+  font-size: 2rem;
+  line-height: 1.8;
+  color: #4f4f4f;
+  margin-bottom: 3.6rem;
 }
 
 /* -------------------------------------------------------------------
@@ -1947,7 +1951,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 }
 #services .services-list .icon i {
   font-size: 5.4rem;
-  color: #423176;
+  color: #6e609b;
 }
 #services .services-list .h05 {
   font-size: 1.7rem;
@@ -2194,7 +2198,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   padding: 12px 20% 15px;
 }
 .lg-sub-html a, .lg-sub-html a:visited {
-  color: #423176;
+  color: #6e609b;
 }
 .lg-sub-html a:hover, .lg-sub-html a:focus {
   color: #FFFFFF;
@@ -2226,7 +2230,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 }
 
 .lg-outer .lg-thumb-item.active, .lg-outer .lg-thumb-item:hover {
-  border-color: #423176;
+  border-color: #6e609b;
 }
 
 .lg-progress-bar .lg-progress {
@@ -2272,7 +2276,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   font-family: "montserrat-bold", sans-serif;
   font-size: 1.8rem;
   line-height: 1.667;
-  color: #07617d;
+  color: #423176;
   text-transform: uppercase;
   letter-spacing: .3rem;
   position: relative;
@@ -2584,7 +2588,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   padding: .6rem 2rem .6rem 2rem;
   margin: 0;
   color: #000000;
-  background: #423176;
+  background: #6e609b;
   border-radius: 3px;
 }
 #contact form .form-field label::after {
@@ -2594,7 +2598,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   margin-top: -6px;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
-  border-bottom: 5px solid #423176;
+  border-bottom: 5px solid #6e609b;
   content: "";
 }
 #contact form ::-webkit-input-placeholder {
@@ -2647,7 +2651,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   line-height: 6rem;
   padding: 0 3rem;
   width: 100%;
-  background: #423176;
+  background: #6e609b;
   color: #000000;
   margin-top: .6rem;
 }
@@ -2668,7 +2672,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 }
 
 #message-success {
-  color: #423176;
+  color: #6e609b;
 }
 
 #message-warning i,
@@ -2810,7 +2814,7 @@ footer a, footer a:visited {
   color: #FFFFFF;
 }
 footer a:hover, footer a:focus {
-  color: #423176;
+  color: #6e609b;
 }
 footer .row {
   max-width: 1024px;
@@ -2867,7 +2871,7 @@ footer h4.h05::after {
   background-color: rgba(0, 0, 0, 0.9);
 }
 .footer-main #mc-form button {
-  background-color: #423176;
+  background-color: #6e609b;
   color: #000000;
   width: 6rem;
   height: 6rem;
@@ -2889,7 +2893,7 @@ footer h4.h05::after {
   left: .2rem;
 }
 .footer-main #mc-form label {
-  color: #423176;
+  color: #6e609b;
   font-family: "montserrat-regular", sans-serif;
 }
 
@@ -2992,4 +2996,93 @@ footer h4.h05::after {
   .footer-bottom .copyright span::after {
     display: none;
   }
+}
+
+
+/*MINE*/
+@font-face {
+    font-family: robot_crush;
+    src: url(fonts/Robot_Crush.ttf);
+}
+.home-content-tablecell h1.maintitle,
+.home-content-tablecell h3.maintitle {
+  font-family: robot_crush;
+}
+/*FAQ section*/
+.faq-header{
+  font-size: 42px;
+  border-bottom: 1px dotted #ccc;
+  padding: 24px;
+  color: white;
+}
+
+.faq-content {
+  margin: 0 auto;
+  color: white;
+}
+.faq-question {
+  padding: 20px 0;
+  border-bottom: 1px dotted #ccc;
+  color: white;
+}
+
+.panel-title {
+  color: white;
+  font-size: 24px;
+  width: 100%;
+  position: relative;
+  margin: 0;
+  padding: 10px 10px 0 48px;
+  cursor: pointer;
+}
+
+.panel-content {
+  color: white;
+  font-size: 20px;
+  padding: 0px 14px;
+  margin: 0 40px;
+  height: 0;
+  overflow: hidden;
+  z-index: -1;
+  position: relative;
+  opacity: 0;
+  -webkit-transition: .4s ease;
+  -moz-transition: .4s ease;
+  -o-transition: .4s ease;
+  transition: .4s ease;
+}
+
+.panel:checked ~ .panel-content{
+  height: auto;
+  opacity: 1;
+  padding: 14px;
+}
+
+.plus {
+  position: absolute;
+  margin-left: 20px;
+  margin-top: 4px;
+  z-index: 5;
+  font-size: 42px;
+  line-height: 100%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-transition: .2s ease;
+  -moz-transition: .2s ease;
+  -o-transition: .2s ease;
+  transition: .2s ease;
+}
+
+.panel:checked ~ .plus {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+input.panel {
+  display: none;
 }
